--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "babel src/ -d lib/ && react-scripts build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
